Added sending automatic notification functionality for Posts and Comments, Completed the API documentation and unit testcases for comment and notification routes
